Se intento hacer el crud

--- a/views/formInstitute/partials/categoryInstitute.ejs
+++ b/views/formInstitute/partials/categoryInstitute.ejs
@@ -1,6 +1,6 @@
 <div class="mb-3">
     <label for="category" class="form-label">Categoría<span style="color: red;">*</span></label>
-    <select class="form-select selectTipoCarrera" name="category">
+    <select class="form-select selectTipoCarrera" id="category" name="category">
         <option selected>Seleccione la categoría * </option>
         <option value="1">Publico</option>
         <option value="2">Privado</option>
