--- a/views/formInstitute/partials/ubicationInstitute.ejs
+++ b/views/formInstitute/partials/ubicationInstitute.ejs
@@ -1,25 +1,31 @@
 <div class="mb-3">
 
-    <label for="province" class="form-label">Provincia</label>
+    <label for="province" class="form-label">Provincia<span
+        style="color: red;">*</span></label>
     <select class="form-select" id="province" name="province">
-       
+       <option selected>Seleccione una provincia</option>
     </select>
     
-    <label for="locality" class="form-label">Localidad</label>
+    <label for="locality" class="form-label">Localidad<span
+        style="color: red;">*</span></label>
     <select class="form-select" id="locality" name="locality">
         <option selected>Selecciona una localidad</option>
     </select>
 
-    <label for="postalCode" class="form-label">Código postal</label>
+    <label for="postalCode" class="form-label">Código postal<span
+        style="color: red;">*</span></label>
     <input type="number" class="form-control" id="postalCode" placeholder="3600" name="postalCode">
 
-    <label for="street" class="form-label">Calle</label>
+    <label for="street" class="form-label">Calle<span
+        style="color: red;">*</span></label>
     <input type="text" class="form-control" id="street" placeholder="***" name="street">
 
-    <label for="altitude" class="form-label">Altura</label>
+    <label for="altitude" class="form-label">Altura<span
+        style="color: red;">*</span></label>
     <input type="text" class="form-control" id="altitude" placeholder="3000" name="altitude">
 
-    <label for="mapLink" class="form-label">Google Maps Link</label>
+    <label for="mapLink" class="form-label">Google Maps Link<span
+        style="color: red;">*</span></label>
     <input type="text" class="form-control" id="mapLink" placeholder="https://www.google.com/maps/place/..." name="mapLink">
 
 </div>
