--- a/views/formInstitute/register-institute.ejs
+++ b/views/formInstitute/register-institute.ejs
@@ -22,7 +22,7 @@
                 <div>
                     <label for="abbreviation" class="form-label">Abreviatura<span style="color: red;">*</span></label>
                     <div class="mb-3">
-                        <input type="text" class="form-control" placeholder="IPF" id="abbreviation">
+                        <input type="text" class="form-control" placeholder="IPF" name="abbreviation" id="abbreviation">
                     </div>
                 </div>
             </div>
@@ -43,8 +43,8 @@
                     <textarea class="form-control" id="description" rows="3" name="description"></textarea>
                 </div>
                     <div class="d-flex justify-content-end">
-                        <a class="btn btn-danger me-2" href='/instituto/:id'>Cancelar</a>
-                        <button type="submit" class="btn btn-success">Agregar</button>
+                        <a class="btn btn-danger me-2" href='/'>Cancelar</a>
+                        <button type="submit" class="btn btn-success" id="btnRegistrar">Registrar</button>
                     </div>
 
         </form>
