se hizo funcional el registro de la institucion

--- a/views/formInstitute/partials/contact.ejs
+++ b/views/formInstitute/partials/contact.ejs
@@ -7,6 +7,6 @@
     <input type="number" class="form-control" id="phone" placeholder="0000000000" name="phone">
     
     <label for="webLink" class="form-label">Página Web<span style="color: red;">*</span></label>
-    <input type="text" class="form-control" id="webLink" placeholder="https://..." name="webLink">
+    <input type="text" class="form-control" id="web_link" placeholder="https://..." name="web_link">
     
 </div>
