--- a/views/formInstitute/partials/ubicationInstitute.ejs
+++ b/views/formInstitute/partials/ubicationInstitute.ejs
@@ -12,9 +12,9 @@
         <option selected>Selecciona una localidad</option>
     </select>
 
-    <label for="postalCode" class="form-label">Código postal<span
+    <label for="postal_code" class="form-label">Código postal<span
         style="color: red;">*</span></label>
-    <input type="number" class="form-control" id="postalCode" placeholder="3600" name="postalCode">
+    <input type="number" class="form-control" id="postal_code" placeholder="3600" name="postal_code">
 
     <label for="street" class="form-label">Calle<span
         style="color: red;">*</span></label>
@@ -24,8 +24,8 @@
         style="color: red;">*</span></label>
     <input type="text" class="form-control" id="altitude" placeholder="3000" name="altitude">
 
-    <label for="mapLink" class="form-label">Google Maps Link<span
+    <label for="map_Link" class="form-label">Google Maps Link<span
         style="color: red;">*</span></label>
-    <input type="text" class="form-control" id="mapLink" placeholder="https://www.google.com/maps/place/..." name="mapLink">
+    <input type="text" class="form-control" id="map_link" placeholder="https://www.google.com/maps/place/..." name="map_link">
 
 </div>
