--- a/views/formInstitute/register-institute.ejs
+++ b/views/formInstitute/register-institute.ejs
@@ -1,54 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registra tu institucion</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/register-institute.css">
     <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon">
 </head>
+
 <body>
     <main>
-        <form class="formAgregarInstituto p-3" id="formAgregarInstituto">
+        <form class="formAgregarInstituto p-3 needs-validation" novalidate id="formAgregarInstituto">
             <h2 class="mb-3">Registra tu institución</h2>
             <div class="nombres">
                 <div class="nombre">
                     <label for="name" class="form-label">Nombre de la institución<span
                             style="color: red;">*</span></label>
-                    <input type="text" placeholder="Instituto politecnico" class="form-control" name="name">
+                    <input type="text" placeholder="Instituto politecnico form-control" class="form-control"
+                        name="name">
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div>
                     <label for="abbreviation" class="form-label">Abreviatura<span style="color: red;">*</span></label>
                     <div class="mb-3">
-                        <input type="text" class="form-control" placeholder="IPF" name="abbreviation" id="abbreviation">
+                        <input type="text" class="form-control needs-validation" placeholder="IPF" name="abbreviation" id="abbreviation">
+                        <div class="valid-feedback">
+                            
+                          </div>
                     </div>
                 </div>
             </div>
-            
-                <%- include('./partials/categoryInstitute'); %>
+
+            <%- include('./partials/categoryInstitute'); %>
 
                 <%- include('./partials/ubicationInstitute.ejs'); %>
 
-                <%- include('./partials/contact.ejs'); %>
+                    <%- include('./partials/contact.ejs'); %>
 
 
-                <div class="mb-3">
-                    <label for="yearFundation" class="form-label">Año de fundación<span style="color: red;">*</span></label>
-                    <input type="number" class="form-control" id="yearFundation" placeholder="2021" name="yearFundation">
-                </div>
-                <div class="mb-3">
-                    <label for="description" class="form-label">Descripción breve de la institucion (max. 255 caracteres)</label>
-                    <textarea class="form-control" id="description" rows="3" name="description"></textarea>
-                </div>
-                    <div class="d-flex justify-content-end">
-                        <a class="btn btn-danger me-2" href='/'>Cancelar</a>
-                        <button type="submit" class="btn btn-success" id="btnRegistrar">Registrar</button>
-                    </div>
+                        <div class="mb-3">
+                            <label for="year_fundation" class="form-label">Año de fundación<span
+                                    style="color: red;">*</span></label>
+                            <input type="number" class="form-control" id="year_fundation" placeholder="2021"
+                                name="year_fundation">
+                        </div>
+                        <div class="mb-3">
+                            <label for="description" class="form-label">Descripción breve de la institucion (max. 255
+                                caracteres)</label>
+                            <input type="text" name="description" id="description" class="form-control">
+                        </div>
+                        <div class="d-flex justify-content-end">
+                            <a class="btn btn-danger me-2" href='/'>Cancelar</a>
+                            <button type="submit" class="btn btn-success" id="btnRegistrar">Registrar</button>
+                        </div>
 
         </form>
     </main>
     <script src="./js/register-institute.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
+
 </html>
