--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -15,25 +15,33 @@
 <body>
   <main>
     <div class="login">
+
       <h1 class="iniciarS">Iniciar sesión</h1>
+
       <form id="login-form" action="/iniciar-sesion" method="POST">
+
         <div class="mb-3">
-          <label for="username" class="form-label">Usuario</label>
-          <input type="text" required class="form-control" id="username" aria-describedby="emailHelp">
-          <div id="username" name="username" class="form-text">Nunca compartiremos tu información con nadie</div>
+          <label for="email" class="form-label">Correo electrónico</label>
+          <input type="text" required class="form-control" id="email" aria-describedby="emailHelp">
+          <div id="email" name="email" class="form-text">Nunca compartiremos tu información con nadie</div>
         </div>
+
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Contraseña</label>
           <input type="password" name="password" required class="form-control" id="exampleInputPassword1">
+
           <small id="passwordError" class="form-text text-danger" style="display: none;">La contraseña es demasiado
             corta.</small>
         </div>
 
         Olvidó su contraseña? Haga click <a href="restorePSW.html" class="aqui">aquí</a>
+        
         <div class="mb-3 form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">Recuerdame</label>
         </div>
+
+
         <div class="botones">
           <button type="submit" class="btn boton">Iniciar sesión</button>
         </div>
@@ -54,7 +62,6 @@
       }
     });
   </script>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
