--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -18,7 +18,7 @@
 
       <h1 class="iniciarS">Iniciar sesión</h1>
 
-      <form id="login-form" action="/iniciar-sesion" method="POST">
+      <form id="login-form">
 
         <div class="mb-3">
           <label for="email" class="form-label">Correo electrónico</label>
@@ -28,10 +28,9 @@
 
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-          <input type="password" name="password" required class="form-control" id="exampleInputPassword1">
+          <input type="password" name="password" required class="form-control" id="password">
 
-          <small id="passwordError" class="form-text text-danger" style="display: none;">La contraseña es demasiado
-            corta.</small>
+          <p id="validationErr"></p>
         </div>
 
         Olvidó su contraseña? Haga click <a href="restorePSW.html" class="aqui">aquí</a>
@@ -49,19 +48,7 @@
     </div>
   </main>
 
-  <script>
-    document.getElementById('login-form').addEventListener('submit', function (event) {
-      const passwordInput = document.getElementById('exampleInputPassword1');
-      const passwordError = document.getElementById('passwordError');
-
-      if (passwordInput.value.length < 6) {
-        passwordError.style.display = 'block';
-        event.preventDefault(); // Detiene el envío del formulario
-      } else {
-        passwordError.style.display = 'none';
-      }
-    });
-  </script>
+  <script src="/js/login.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
