--- a/public/css/register.css
+++ b/public/css/register.css
@@ -55,3 +55,13 @@ button:hover {
   padding-bottom: 5%;
 
 }
+
+#register {
+  width: 35%;
+  margin: 10px;
+  background-color: white;
+  border: 25px solid;
+  border-radius: 3%;
+  border-color: white;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
