--- a/src/views/workWithUs/index.ejs
+++ b/src/views/workWithUs/index.ejs
@@ -12,10 +12,11 @@
       </ol>
     </nav>
     <div class="preguntas-frecuentes">
-      <a href="/preguntas-frecuentes"><img src="./img/home/question-mark-vector-icon.png" style="width: 30px;" alt="Ayuda"></a>
+      <a href="/preguntas-frecuentes"><img src="./img/home/question-mark-vector-icon.png" style="width: 30px;"
+          alt="Ayuda"></a>
     </div>
   </header>
-  
+
   <main>
     <form>
       <h2>Trabaja con nosotros</h2>
