fix: se corrigio el codigo, eliminacion de codigo innecesario, modularizacion de (helpers, routes, controllers), correccion de schemas, correccion de idioma del codigo y cambio de nombre de los modelos de BD

--- a/src/views/formInstitute/partials/contact.ejs
+++ b/src/views/formInstitute/partials/contact.ejs
@@ -1,12 +1,12 @@
 <div class="mb-3">
-                    
+
     <label for="mail" class="form-label">Correo electrónico<span style="color: red;">*</span></label>
-    <input type="email" class="form-control" id="mail" placeholder="<EMAIL>" name="mail">
+    <input type="email" class="form-control mb-3" id="mail" placeholder="<EMAIL>" name="mail">
 
     <label for="phone" class="form-label">Teléfono de administración<span style="color: red;">*</span></label>
-    <input type="number" class="form-control" id="phone" placeholder="0000000000" name="phone">
-    
+    <input type="tel" class="form-control mb-3" id="tel" placeholder="0000000000" name="tel">
+
     <label for="webLink" class="form-label">Página Web<span style="color: red;">*</span></label>
     <input type="text" class="form-control" id="web_link" placeholder="https://..." name="web_link">
-    
+
 </div>
