--- a/src/views/formInstitute/partials/modality.ejs
+++ b/src/views/formInstitute/partials/modality.ejs
@@ -1,9 +1,9 @@
-<div class="w-100 mb-3">
+<div class="w-100">
     <label for="modality" class="form-label">Modalidad<span style="color: red;">*</span></label>
     <select class="form-select" name="modality">
-    <option selected>Seleccione una modalidad</option>
-    <option value="1">Presencial</option>
-    <option value="2">A distancia</option>
-    <option value="3">Presencial y a distancia</option>
-</select>
+        <option selected>Seleccione una modalidad</option>
+        <option value="1">Presencial</option>
+        <option value="2">A distancia</option>
+        <option value="3">Presencial y a distancia</option>
+    </select>
 </div>
