--- a/src/views/formInstitute/partials/ubicationInstitute.ejs
+++ b/src/views/formInstitute/partials/ubicationInstitute.ejs
@@ -1,31 +1,30 @@
 <div class="mb-3">
+    <div class="d-flex flex-row w-100">
+        <div class="w-50 me-3">
+            <label for="province" class="form-label">Provincia<span style="color: red;">*</span></label>
+            <select class="form-select mb-3" id="province" name="province">
+                <option selected>Seleccione una provincia</option>
+            </select>
+        </div>
+        <div class="w-50">
+            <label for="locality" class="form-label">Localidad<span style="color: red;">*</span></label>
+            <select class="form-select mb-3" id="locality" name="locality">
+                <option selected>Selecciona una localidad</option>
+            </select>
+        </div>
+    </div>
 
-    <label for="province" class="form-label">Provincia<span
-        style="color: red;">*</span></label>
-    <select class="form-select" id="province" name="province">
-       <option selected>Seleccione una provincia</option>
-    </select>
-    
-    <label for="locality" class="form-label">Localidad<span
-        style="color: red;">*</span></label>
-    <select class="form-select" id="locality" name="locality">
-        <option selected>Selecciona una localidad</option>
-    </select>
+    <label for="postal_code" class="form-label">Código postal<span style="color: red;">*</span></label>
+    <input type="number" class="form-control mb-3" id="postal_code" placeholder="3600" name="postal_code">
 
-    <label for="postal_code" class="form-label">Código postal<span
-        style="color: red;">*</span></label>
-    <input type="number" class="form-control" id="postal_code" placeholder="3600" name="postal_code">
+    <label for="street" class="form-label">Calle<span style="color: red;">*</span></label>
+    <input type="text" class="form-control mb-3" id="street" placeholder="***" name="street">
 
-    <label for="street" class="form-label">Calle<span
-        style="color: red;">*</span></label>
-    <input type="text" class="form-control" id="street" placeholder="***" name="street">
+    <label for="altitude" class="form-label">Altura<span style="color: red;">*</span></label>
+    <input type="text" class="form-control mb-3" id="altitude" placeholder="3000" name="altitude">
 
-    <label for="altitude" class="form-label">Altura<span
-        style="color: red;">*</span></label>
-    <input type="text" class="form-control" id="altitude" placeholder="3000" name="altitude">
-
-    <label for="map_Link" class="form-label">Google Maps Link<span
-        style="color: red;">*</span></label>
-    <input type="text" class="form-control" id="map_link" placeholder="https://www.google.com/maps/place/..." name="map_link">
+    <label for="map_Link" class="form-label">Google Maps Link<span style="color: red;">*</span></label>
+    <input type="text" class="form-control mb-3" id="map_link" placeholder="https://www.google.com/maps/place/..."
+        name="map_link">
 
 </div>
