Se hicieron modificaciones en el Frontend

--- a/src/views/formInstitute/register-career.ejs
+++ b/src/views/formInstitute/register-career.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header.ejs'); %>
-    <main>
+    <main class="bg-success">
         <form class="formAgregarCarrera p-3" id="formAgregarCarrera">
-            <h2 class="mb-3">Agrega una nueva carrera</h2>
+            <h2 class="mb-3 text-center">Agrega una nueva carrera</h2>
             <div class="mb-3">
                 <label for="facultad" class="form-label">Facultad de la carrera<span
                         style="color: red;">*</span></label>
