--- a/src/views/formInstitute/register-institute.ejs
+++ b/src/views/formInstitute/register-institute.ejs
@@ -14,7 +14,7 @@
 <body>
     <main>
         <form class="formAgregarInstituto p-3 needs-validation" novalidate id="formAgregarInstituto">
-            <h2 class="">Registra tu institución</h2>
+            <h2 class="text-center">Registra tu institución</h2>
             <div class="nombres mb-3">
                 <div class="nombre me-3">
                     <label for="name" class="form-label">Nombre de la institución<span
