--- a/src/views/userInstitute/index.ejs
+++ b/src/views/userInstitute/index.ejs
@@ -16,39 +16,30 @@
 
     <main>
         <section>
-            <div class="col-lg-12  pt-2" id="info">
-
+            <div class="col-lg-12 pt-2" id="info">
                 <div>
-
-                    <div class="col-lg-3 mb-4 perfil">
-                        <img src="/img/profile_logo.png" width="210px" alt="Profile Picture">
-                    </div>
-                    <div class="botones ">
-                        <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none"><a href="">Editar perfil</a></button>
-
-
-                        <button type="button" class="btn btn-secondary btn-sm boton  mb-4 " style="text-decoration: none"><a href="/register/register.html">Cerrar sesión</a></button>
-
+                    <div class="mb-3 perfil">
+                        <img src="/img/profile_logo.png" width="180" alt="Profile">
                     </div>
                 </div>
-
-                <div class="ubi mb-3">
-                    <div class="card-body">
-                        <h1>UBICACIÓN </h1>
-                    </div>
-                </div>
-
 
         </section>
 
-
-
+        <div class="botones justify-content-center">
+            <button type="button" class="btn-sm boton m-2"><a href="">Editar perfil</a></button>
+            <button type="button" class="btn-sm boton m-2"><a href="/register/register.html">Cerrar
+                    sesión</a></button>
+        </div>
 
         <article>
+            <div class="ubi mb-4 d-flex align-items-center">
+                <h1>UBICACIÓN </h1>
+            </div>
+        </article>
 
-            <div class="card mb-5 me-3">
+        <article>
+            <div class="card mb-5 m-3">
                 <div class="card-body">
-
                     <h1>NOMBRE DE INSTITUCION</h1>
                     <p></p>
                     <p>[UBICACIÓN]</p>
@@ -63,16 +54,14 @@
                     </ul>
                 </div>
             </div>
-
-            <div class="card mb-5">
-
-        <div class="card-body">
-            <div class="config">
-                <h1>Historial de reseñas</h1>
-                <a class="navbar-brand" href="/home/home.html">
-                    <div class="editar"></div>
-                </a>
-            </div>
+            <div class="card mb-5 m-3">
+                <div class="card-body">
+                    <div class="config">
+                        <h1>Historial de reseñas</h1>
+                        <a class="navbar-brand" href="/home/home.html">
+                            <div class="editar"></div>
+                        </a>
+                    </div>
 
                     <p>Tuve el privilegio de ser parte de la comunidad estudiantil en la Universidad "Ejemplo" durante
                         los
@@ -81,53 +70,49 @@
                         ser un lugar excepcional para el aprendizaje, el crecimiento personal y el desarrollo académico.
                     </p>
                 </div>
-
             </div>
         </article>
 
+        </article>
+
         <div class="listadocarreras">
+            <section class="cuadroCarreras m-1 p-1">
+                <div class="text-center">
+                    <h1>Carreras</h1>
+                </div>
 
-        </div>
-    </article>
+                <div class="botones me-2 justify-content-center">
+                    <button type="button" class="btn-sm boton m-2" style="text-decoration: none"><a
+                            href="">Añadir carrera</a></button>
+                    <button type="button" class="btn-sm boton m-2" style="text-decoration: none"><a
+                            href="">Ver todas las Carreras</a></button>
+                </div>
 
-    <div class="listadocarreras">
+                <div class="listadocarrera m-4">
+                    <div class="carrera">
+                        <h3>Licenciatura en Ingeniería de Software</h3>
+                        <p>Años de Duración: 4</p>
+                        <p>Modalidad: Presencial</p>
+                        <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none;
+                  "><a href="">Ver más</a></button>
+                    </div>
+                    <div class="carrera">
+                        <h3>Técnico en Programación Web</h3>
+                        <p>Años de Duración: 3</p>
+                        <p>Modalidad: Virtual</p>
+                        <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none;
+                  "><a href="">Ver más</a></button>
+                    </div>
+                    <div class="carrera">
+                        <h3> Licenciatura en Administración de Empresas</h3>
+                        <p>Años de Duración: 5</p>
+                        <p>Modalidad: Semipresencial</p>
+                        <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none;
+                  "><a href="">Ver más</a></button>
+                    </div>
+                </div>
 
+            </section>
     </main>
-    <section class="cuadroCarreras m-5 p-3">
-
-        <h1>Carreras</h1>
-        <div class="botones me-3">
-            <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none"><a href="">Añadir carrera</a></button>
-        </div>
-        
-    
-        <div class="listadocarrera m-4">
-            <div class="carrera">
-                <h3>Licenciatura en Ingeniería de Software</h3>
-                <p>Años de Duración: 4</p>
-                <p>Modalidad: Presencial</p>
-                <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none;
-              "><a href="">Ver más</a></button>
-            </div>
-            <div class="carrera">
-                <h3>Técnico en Programación Web</h3>
-                <p>Años de Duración: 3</p>
-                <p>Modalidad: Virtual</p>
-                <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none;
-              "><a href="">Ver más</a></button>
-            </div>
-            <div class="carrera">
-                <h3> Licenciatura en Administración de Empresas</h3>
-                <p>Años de Duración: 5</p>
-                <p>Modalidad: Semipresencial</p>
-                <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none;
-              "><a href="">Ver más</a></button>
-            </div>
-        </div>
-        <div class="botones me-3">
-            <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none"><a href="">Ver todas las Carreras</a></button>
-        </div>
-        
-    </section>
 
     <%- include('./partials/footer.ejs'); %>
