--- a/src/public/css/register-institute.css
+++ b/src/public/css/register-institute.css
@@ -5,7 +5,7 @@ main {
     justify-content: center;
 }
 body {
-    background-color: #f4f4f4;
+    background: radial-gradient(#b4b4b4, rgb(214, 255, 133));
 }
 form {
     width: 40%;
@@ -20,3 +20,4 @@ form {
 .nombre {
     width: 95%;
 }
+
