Cambiando color de las paletas, todavia no hago merge en rama develop hasta consultar con todo el equipo de desarrollo

--- a/src/views/workWithUs/index.ejs
+++ b/src/views/workWithUs/index.ejs
@@ -17,7 +17,7 @@
     </div>
   </header>
 
-  <main>
+  <main class="bg-dark">
     <form>
       <h2>Trabaja con nosotros</h2>
       <div class="mb-3">
