--- a/src/public/css/faq.css
+++ b/src/public/css/faq.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Alegreya+Sans:300);
 body {
   font-family: "Alegreya Sans", sans-serif;
+  background: radial-gradient(rgb(255, 255, 255), rgb(128, 128, 128));
 }
 
 html {
