--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -2,7 +2,7 @@
 
   
   <main>
-    <section class="principal">
+    <section class="principal bg-dark">
       <div class="section">
         <h1 class="bienvenida">Bienvenido a University of Knowledge
         </h1>
@@ -12,11 +12,11 @@
         <p>En UK, estamos comprometidos en brindarte el apoyo que necesitas para desbloquear tu potencial y alcanzar tus
           metas académicas. ¡Comienza a explorar ahora y prepárate para un futuro prometedor en el mundo del
           conocimiento!</p>
-        <a class="nav-link busqueda" href="/busqueda">Empieza tu búsqueda</a>
+        <a class="nav-link busqueda bg-dark" href="/busqueda">Empieza tu búsqueda</a>
       </div>
 
-      <div class="reseñas-cuadro">
-        <h2>Algunas reseñas</h2>
+      <div class="reseñas-cuadro bg-light">
+        <h2 class="text-dark">Algunas reseñas</h2>
         <div class="reseñas">
           <div class="card reseña">
             <div class="card-body">
