--- a/src/views/search/index.ejs
+++ b/src/views/search/index.ejs
@@ -1,30 +1,30 @@
 <%- include('./partials/header.ejs'); %>
 
-<header id="cabecera" class="d-flex justify-content-between align-content-center">
-  <nav aria-label="breadcrumb d-flex align-content-center">
-    <ol class="breadcrumb p-2 m-0 ps-3 d-flex justify-content-between">
-      <li class="breadcrumb-item">
-        <a class="navbar-brand" href="/">
-          <div class="logo"></div>
-        </a>
-      </li>
-      <li class="breadcrumb-item active" aria-current="page">Buscar</li>
-    </ol>
-  </nav>
-  <div class="preguntas-frecuentes">
-    <a href="/preguntas-frecuentes"><img src="./img/home/question-mark-vector-icon.png" style="width: 30px;"
-        alt="Ayuda"></a>
-  </div>
-</header>
-  <main>
-    <section>
+  <header id="cabecera" class="d-flex justify-content-between align-content-center">
+    <nav aria-label="breadcrumb d-flex align-content-center">
+      <ol class="breadcrumb p-2 m-0 ps-3 d-flex justify-content-between">
+        <li class="breadcrumb-item">
+          <a class="navbar-brand" href="/">
+            <div class="logo"></div>
+          </a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">Buscar</li>
+      </ol>
+    </nav>
+    <div class="preguntas-frecuentes">
+      <a href="/preguntas-frecuentes"><img src="./img/home/question-mark-vector-icon.png" style="width: 30px;"
+          alt="Ayuda"></a>
+    </div>
+  </header>
+  <main class="justify-content-center bg-dark">
+    <section class="justify-content-center text-light">
       <div class="busquedaCuadro w-100">
         <h3><label for="busqueda">Busca una universidad/carrera</label></h3>
         <div class="d-flex w-100 d-flex justify-content-center">
           <input type="text" id="busqueda" placeholder="Ingeniería en Software" name="busqueda">
-        <button class="w-auto" id="btnBuscar">Buscar</button>
+          <button class="w-auto" id="btnBuscar">Buscar</button>
         </div>
-        
+
       </div>
       <div id="resultados">
 
@@ -55,7 +55,6 @@
       </div>
 
     </section>
-    
   </main>
 
   <%- include('./partials/footer.ejs'); %>
