Se agrego filtro de busqueda por institucion/universidad y se hicieron pequeñas modificaciones

--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -12,7 +12,7 @@
         <p>En UK, estamos comprometidos en brindarte el apoyo que necesitas para desbloquear tu potencial y alcanzar tus
           metas académicas. ¡Comienza a explorar ahora y prepárate para un futuro prometedor en el mundo del
           conocimiento!</p>
-        <a class="nav-link busqueda bg-dark" href="/busqueda">Empieza tu búsqueda</a>
+        <a class="nav-link busqueda" href="/busqueda">Empieza tu búsqueda</a>
       </div>
 
       <div class="reseñas-cuadro bg-light">
