--- a/src/views/formInstitute/register-institute.ejs
+++ b/src/views/formInstitute/register-institute.ejs
@@ -61,7 +61,7 @@
 
         </form>
     </main>
-    <script src="./js/register-institute.js"></script>
+    <script src="./js/registerInstitute.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
