Se relaciono el usuario con la institucion

--- a/src/views/formInstitute/partials/categoryInstitute.ejs
+++ b/src/views/formInstitute/partials/categoryInstitute.ejs
@@ -2,8 +2,7 @@
     <label for="category" class="form-label">Categoría<span style="color: red;">*</span></label>
     <select class="form-select selectTipoCarrera" id="category" name="category">
         <option selected>Seleccione la categoría * </option>
-        <option value="1">Publico</option>
-        <option value="2">Privado</option>
-        <option value="3">Semi-Privado</option>
+        <option value="1" id="1">Publico</option>
+        <option value="2" id="2">Privado</option>
     </select>
 </div>
