FEAT: Register y login completamente funcionales,  integracion de JWT para el registro de instituciones

--- a/src/views/formInstitute/register-institute.ejs
+++ b/src/views/formInstitute/register-institute.ejs
@@ -14,7 +14,7 @@
 <body>
     <main>
         <form class="formAgregarInstituto p-3 needs-validation" novalidate id="formAgregarInstituto"
-            data-id="<%- id %>">
+            data-id="<%- id_user %>">
             <h2 class="">Registra tu institución</h2>
             <div class="nombres mb-3">
                 <div class="nombre me-3">
@@ -62,12 +62,8 @@
 
         </form>
     </main>
-    <<<<<<< HEAD <script src="/js/registerInstitute.js">
-        </script>
-        =======
-        <script src="./js/registerInstitute.js"></script>
-        >>>>>>> origin/costadoni
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/js/registerInstitute.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
