--- a/src/views/register/registerUser.ejs
+++ b/src/views/register/registerUser.ejs
@@ -16,7 +16,7 @@
   <main>
     <form id="formRegister" class="registerForm">
       <div class="register">
-        <h1 class="iniciarS">Registrate</h1>
+        <h2 class="iniciarS">Registratar un usuario</h2>
 
 
         <div class="mb-3">
@@ -32,33 +32,25 @@
         <div class="mb-3">
           <label for="email" class="form-label">Correo electrónico</label>
           <input type="text" id="email" name="email" class="form-control" aria-describedby="emailHelp">
-          <div id="email" class="form-text">Nunca compartiremos tu información con nadie</div>
         </div>
 
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Contraseña</label>
           <input type="password" id="password" name="password" required class="form-control">
-
-          <p id="validationErr"></p>
         </div>
-
-        Olvidó su contraseña? Haga click <a href="restorePSW.html" class="aqui">aquí</a>
-
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Recuerdame</label>
+        <div class="form-check form-switch d-flex justify-content-end pb-3">
+          <input class="form-check-input" type="checkbox" role="switch" name="isAdmin" id="flexSwitchCheckDefault">
+          <label class="form-check-label" for="flexSwitchCheckDefault"> isAdmin?</label>
         </div>
-
-
-        <div class="botones">
-          <button type="submit" class="btn boton">Iniciar sesión</button>
+        <div class="w-100 d-flex justify-content-end p-0">
+          <button type="submit" class="btn btn-primary">Registrar</button>
         </div>
+      </div>
     </form>
-    </div>
   </main>
 
   <script src="./js/registerUser.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
