--- a/src/views/userInstitute/index.ejs
+++ b/src/views/userInstitute/index.ejs
@@ -82,10 +82,10 @@
                 </div>
 
                 <div class="botones me-2 justify-content-center">
-                    <button type="button" class="btn-sm boton m-2" style="text-decoration: none"><a
-                            href="">Añadir carrera</a></button>
-                    <button type="button" class="btn-sm boton m-2" style="text-decoration: none"><a
-                            href="">Ver todas las Carreras</a></button>
+                    <button type="button" class="btn-sm boton m-2" style="text-decoration: none"><a href="">Añadir
+                            carrera</a></button>
+                    <button type="button" class="btn-sm boton m-2" style="text-decoration: none"><a href="">Ver todas
+                            las Carreras</a></button>
                 </div>
 
                 <div class="listadocarrera m-4">
