--- a/src/views/home/partials/footer.ejs
+++ b/src/views/home/partials/footer.ejs
@@ -1,14 +1,21 @@
 <footer class="d-flex flex-direction-column align-items-end justify-content-center">
   <div class="py-3">
 
-    <ul class="nav justify-content-center border-bottom pb-3">
-      <li class="nav-item"><a href="/trabaja-con-nosotros" class="nav-link px-2 text-muted">Trabaja con nosotros</a>
-      </li>
-      <li class="nav-item"><a href="/preguntas-frecuentes" class="nav-link px-2 text-muted">Preguntas frecuentes</a>
-      </li>
-      <li class="nav-item"><a href="/acerca-de-nosotros" class="nav-link px-2 text-muted">Acerca de nosotros</a></li>
+    <ul class="options">
+
+      <a href="/trabaja-con-nosotros" class="nav-link px-2">Trabaja con nosotros</a>
+  
+      <a href="/preguntas-frecuentes" class="nav-link px-2">Preguntas frecuentes</a>
+      
+     <a href="/acerca-de-nosotros" class="nav-link px-2 ">Acerca de nosotros</a>
+     
+     <div class="license">
+      
+       <p>© 2023 UK, Inc</p>
+
+     </div>
+     
     </ul>
-    <p class="text-center text-muted">© 2023 UK, Inc</p>
   </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
