--- a/src/views/home/partials/header.ejs
+++ b/src/views/home/partials/header.ejs
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inicio</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/home.css" />
+    <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/home.css">
-  <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon">
-</head>
+  <body>
+    <header>
+      <nav>
+        <ol class="mt-5 mb-5  ">
 
-<body>
-  <header id="cabecera" class="d-flex justify-content-between align-content-center">
-    <nav aria-label="breadcrumb d-flex align-content-center">
-      <ol class="breadcrumb p-2 m-0 ps-3 d-flex justify-content-between">
-        <li class="breadcrumb-item">
-          <a class="navbar-brand" href="/">
-            <div class="logo"></div>
-          </a>
-        </li>
-      </ol>
-    </nav>
-    <div class="preguntas-frecuentes">
-      <a href="/preguntas-frecuentes"><img src="./img/home/question-mark-vector-icon.png" style="width: 30px;"
-          alt="Ayuda"></a>
-    </div>
-  </header>
+          <div>
+
+            <a href="/preguntas-frecuentes" class="material-symbols-outlined">
+              home
+            </a>
+          </div>
+
+          <div>
+            <a  href="/preguntas-frecuentes" class="material-symbols-outlined">
+                quiz
+            </a>
+          </div>
+
+        </ol>
+      </nav>
+    </header>
+  </body>
+</html>
