--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -1,26 +1,17 @@
 <%- include('./partials/header.ejs'); %>
-<br>
+<br />
 <h1 class="title">Bienvenido a University of Knowledge</h1>
 <main class="mt-5 mb-5">
-  <article class="section mt-4 mb-4">
 
-    <img src="src/public/img/home/Institute.png" alt="Institute" style="width:100; height:100">
+  
+  <article class="section mt-2 mb-2">
+    <img src="img/home/Institute.png" alt="Institute" width="300" />
 
     <p>
-      Nuestra plataforma te proporciona información actualizada sobre
-      oportunidades académicas para que tomes decisiones informadas sobre tu
-      futuro educativo. Explora una amplia gama de opciones de estudio, carreras
-      y programas, y accede a recursos valiosos que te ayudarán en tu camino
-      hacia el éxito educativo.
+      Tu fuente confiable de información académica actualizada. Descubre oportunidades de estudio, carreras y recursos para tu éxito educativo. ¡Explora y forja tu camino hacia un futuro prometedor en el mundo del conocimiento!
     </p>
-    <p>
-      En UK, estamos comprometidos en brindarte el apoyo que necesitas para
-      desbloquear tu potencial y alcanzar tus metas académicas. ¡Comienza a
-      explorar ahora y prepárate para un futuro prometedor en el mundo del
-      conocimiento!
-    </p>
-    <a class="nav-link busqueda" href="/busqueda">Empieza tu búsqueda</a>
-  </article>
+    </article>
+
 
   <article class="reseñas-cuadro mt-5 mb-5">
     <h2>Algunas reseñas</h2>
@@ -67,6 +58,7 @@
       </div>
     </div>
   </article>
+  
 </main>
 
 <%- include('./partials/footer.ejs'); %>
