--- a/src/public/css/search.css
+++ b/src/public/css/search.css
@@ -2,17 +2,6 @@
 body {
   font-family: "Alegreya Sans", sans-serif;
 }
-.logo {
-  background-image: url(/home/img/logo.png);
-  width: 45px;
-  height: 45px;
-  background-size: cover;
-  transition: 0.1s ease-in-out;
-}
-.logo:hover {
-  transform: scale(1.2);
-  background-image: url(/home/img/logo_hover.png);
-}
 #cabecera {
   position: sticky;
   z-index: 2;
@@ -30,9 +19,14 @@ body {
   transform: scale(1.2);
   background-image: url(../img/home/logo_hover.png);
 }
-header li {
-  font-size: 30px;
-}
+  
+
+nav {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+} 
+
 .preguntas-frecuentes {
   display: flex;
   justify-content: center;
