--- a/src/views/home/partials/header.ejs
+++ b/src/views/home/partials/header.ejs
@@ -13,28 +13,32 @@
     />
     <link rel="stylesheet" href="./css/home.css" />
     <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
 
   <body>
     <header>
       <nav>
-        <ol class="mt-5 mb-5  ">
+        <div class="mt-5 mb-5">
+          <a href="/" class="material-symbols-outlined"> 
+            home 
+          </a>
+        </div>
 
-          <div>
+        <div>
+          <a href="/preguntas-frecuentes" class="material-symbols-outlined">
+            quiz
+          </a>
+        </div>
 
-            <a href="/preguntas-frecuentes" class="material-symbols-outlined">
-              home
-            </a>
-          </div>
-
-          <div>
-            <a  href="/preguntas-frecuentes" class="material-symbols-outlined">
-                quiz
-            </a>
-          </div>
-
-        </ol>
+        <div>
+          <a href="/busqueda" class="material-symbols-outlined">
+            travel_explore
+          </a>
+        </div>
       </nav>
     </header>
   </body>
