--- a/src/views/search/partials/footer.ejs
+++ b/src/views/search/partials/footer.ejs
@@ -1,7 +1,15 @@
+<footer class="d-flex flex-direction-column align-items-end justify-content-center">
+    <ul class="options">
 
-<script  src="./js/main.js" type="module"></script>
-<script src="models/universidad.js" type="module"></script>
-<script src="./js/busqueda.js" type="module"></script>
+      <a class="nav-link">© 2023 UK, Inc</a>
+      <a href="/trabaja-con-nosotros" class="nav-link">Trabaja con nosotros</a>
+      <a href="/preguntas-frecuentes" class="nav-link">Preguntas frecuentes</a>
+     <a href="/acerca-de-nosotros" class="nav-link">Acerca de nosotros</a>
+     
+     
+    </ul>
+  
+  </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
   crossorigin="anonymous"></script>
