--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -1,17 +1,15 @@
 <%- include('./partials/header.ejs'); %>
 
-  
+
   <main>
-    <section class="principal bg-dark">
-      <div class="section">
+    <section class="principal">
+      <div class="containerBienvenida">
         <h1 class="bienvenida">Bienvenido a University of Knowledge
         </h1>
-        <p>Nuestra plataforma te proporciona información actualizada sobre oportunidades académicas para que tomes
-          decisiones informadas sobre tu futuro educativo. Explora una amplia gama de opciones de estudio, carreras y
-          programas, y accede a recursos valiosos que te ayudarán en tu camino hacia el éxito educativo. </p>
-        <p>En UK, estamos comprometidos en brindarte el apoyo que necesitas para desbloquear tu potencial y alcanzar tus
-          metas académicas. ¡Comienza a explorar ahora y prepárate para un futuro prometedor en el mundo del
-          conocimiento!</p>
+        <p>Descubre oportunidades académicas actualizadas en nuestra plataforma y elige la mejor opción para tu futuro
+          educativo. </p>
+        <p>En UK, te apoyamos para que desarrolles tu potencial y logres tus objetivos académicos. Explora
+          ahora y prepárate para un mundo de conocimiento.</p>
         <a class="nav-link busqueda" href="/busqueda">Empieza tu búsqueda</a>
       </div>
 
@@ -54,6 +52,6 @@
     </section>
   </main>
 
-  
+
 
   <%- include('./partials/footer.ejs'); %>
