--- a/src/views/home/partials/header.ejs
+++ b/src/views/home/partials/header.ejs
@@ -18,13 +18,33 @@
       <ol class="breadcrumb p-2 m-0 ps-3 d-flex justify-content-between">
         <li class="breadcrumb-item">
           <a class="navbar-brand" href="/">
-            <div class="logo"></div>
-          </a>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home-2" width="32" height="32"
+              viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffb4a3" fill="none" stroke-linecap="round"
+              stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M5 12l-2 0l9 -9l9 9l-2 0" />
+              <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" />
+              <path d="M10 12h4v4h-4z" />
+            </svg> </a>
         </li>
       </ol>
     </nav>
     <div class="preguntas-frecuentes">
-      <a href="/preguntas-frecuentes"><img src="./img/home/question-mark-vector-icon.png" style="width: 30px;"
-          alt="Ayuda"></a>
+      <a href="/iniciar-sesion" class="pe-3"><svg xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-login-2" width="32" height="32" viewBox="0 0 24 24" stroke-width="2.5"
+          stroke="#ffb4a3" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path d="M9 8v-2a2 2 0 0 1 2 -2h7a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-7a2 2 0 0 1 -2 -2v-2" />
+          <path d="M3 12h13l-3 -3" />
+          <path d="M13 15l3 -3" />
+        </svg></a>
+      <a href="/preguntas-frecuentes"><svg xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-help-circle" width="32" height="32" viewBox="0 0 24 24" stroke-width="2.5"
+          stroke="#ffb4a3" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" />
+          <path d="M12 16v.01" />
+          <path d="M12 13a2 2 0 0 0 .914 -3.782a1.98 1.98 0 0 0 -2.414 .483" />
+        </svg></a>
     </div>
   </header>
