--- a/src/views/userInstitute/index.ejs
+++ b/src/views/userInstitute/index.ejs
@@ -4,7 +4,7 @@
         <nav aria-label="breadcrumb d-flex align-content-center">
             <ol class="breadcrumb p-3 mb-1" style="height: 70px;">
                 <li class="breadcrumb-item">
-                    <a class="navbar-brand" href="../home/home.html">
+                    <a class="navbar-brand" href="/">
                         <div class="logo"></div>
                     </a>
                 </li>
