--- a/src/views/formInstitute/register-institute.ejs
+++ b/src/views/formInstitute/register-institute.ejs
@@ -62,12 +62,12 @@
 
         </form>
     </main>
-    <<<<<<< HEAD <script src="/js/registerInstitute.js">
-        </script>
-        =======
-        <script src="./js/registerInstitute.js"></script>
-        >>>>>>> origin/costadoni
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/js/registerInstitute.js">
+    </script>
+
+    <script src="./js/registerInstitute.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
