--- a/src/views/home/partials/footer.ejs
+++ b/src/views/home/partials/footer.ejs
@@ -2,18 +2,18 @@
   <div class="py-3">
 
     <ul class="nav justify-content-center border-bottom pb-3">
-      <li class="nav-item"><a href="/trabaja-con-nosotros" class="nav-link px-2 text-muted">Trabaja con nosotros</a>
+      <li class="nav-item"><a href="/trabaja-con-nosotros" class="nav-link px-2 links-footer">Trabaja
+          con nosotros</a>
       </li>
-      <li class="nav-item"><a href="/preguntas-frecuentes" class="nav-link px-2 text-muted">Preguntas frecuentes</a>
+      <li class="nav-item"><a href="/preguntas-frecuentes" class="nav-link px-2 links-footer">Preguntas frecuentes</a>
       </li>
-      <li class="nav-item"><a href="/acerca-de-nosotros" class="nav-link px-2 text-muted">Acerca de nosotros</a></li>
+      <li class="nav-item"><a href="/acerca-de-nosotros" class="nav-link px-2 links-footer">Acerca de nosotros</a></li>
     </ul>
-    <p class="text-center text-muted">© 2023 UK, Inc</p>
+    <p class="text-center text-muted footer-p">© 2023 UK, Inc</p>
   </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-  crossorigin="anonymous"></script>
+  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 
 </html>
