feat: more design

--- a/src/views/home/partials/header.ejs
+++ b/src/views/home/partials/header.ejs
@@ -23,9 +23,7 @@
     <header>
       <nav>
         <div class="mt-5 mb-5">
-          <a href="/" class="material-symbols-outlined"> 
-            home 
-          </a>
+          <a href="/" class="material-symbols-outlined"> home </a>
         </div>
 
         <div>
@@ -37,6 +35,11 @@
         <div>
           <a href="/busqueda" class="material-symbols-outlined">
             travel_explore
+          </a>
+        </div>
+        <div>
+          <a href="/registro-usuario" class="material-symbols-outlined">
+            how_to_reg
           </a>
         </div>
       </nav>
