Se hizo funcional la eliminacion de usuario en la vista admin

--- a/src/views/home/partials/header.ejs
+++ b/src/views/home/partials/header.ejs
@@ -10,6 +10,7 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/home.css">
   <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -28,3 +29,5 @@
           alt="Ayuda"></a>
     </div>
   </header>
+
+  <script src="/js/admin.js"></script>
