--- a/src/views/admin/admin.ejs
+++ b/src/views/admin/admin.ejs
@@ -8,19 +8,22 @@
     <title>Administrar usuarios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
     <div class="container">
         <div class="row mt-5">
-            <h1 class="text-center border-botton">Lista de usuarios</h1>
+            <h1 class="text-center border-bottom">Lista de usuarios</h1>
             <div class="col">
                 <div class="col-md-3 mb-2">
-                    <a href="/registro-usuario" class="btn btn sm btn-primary">Nuevo usuario </a>
+                    <a href="/registro-usuario" class="btn btn-sm btn-primary">Nuevo usuario </a>
                     <a href="/" class="btn btn-info text-light">Inicio</a>
+                    
                 </div>
                 <table class="table">
                     <thead>
+                        
                         <tr>
                             <th>Id</th>
                             <th>Nombre</th>
@@ -32,31 +35,41 @@
                     <tbody id="usersList">
                         <% users.forEach(function(user){ %>
                             <tr>
-                                <th>
+                                <td> <!-- Cambié "th" a "td" -->
                                     <%= user.id %>
-                                </th>
-                                <th>
+                                </td>
+                                <td>
                                     <%= user.firstName %>
-                                </th>
-                                <th>
+                                </td>
+                                <td>
                                     <%= user.lastName %>
-                                </th>
-                                <th>
+                                </td>
+                                <td>
                                     <%= user.email %>
-                                </th>
-                                <th>
-                                    <a class="btn btn-danger">Eliminar</a>
+                                </td>
+                                <td>
+                                    <button class="btn btn-sm btn-danger" data-id="<%= user.id %>"
+                                        onclick="eliminarReserva(event)">Eliminar</button> <!-- Corregí el botón eliminar -->
                                     <a href="<%= `/ver-usuario/${user.id}` %>"></a>
                                     <a href="<%= `/editar-usuario/${user.id}` %>" class="btn btn-warning">Editar</a>
-                                </th>
+                                </td>
+                                <td>
+                                    <button class="btn btn-sm btn-danger" data-id="<%= user.id %>" onclick="eliminarReserva(event)">Eliminar</button>
+                                    <a href="/ver-usuario/<%= user.id %>" class="btn btn-info">Ver</a>
+                                    <a href="/editar-usuario/<%= user.id %>" class="btn btn-warning">Editar</a>
+                                    <a href="#" class="btn btn-warning" onclick="editarUsuario( user.id )">Editar</a>
+
+                                </td>
+                                
                             </tr>
-                            <% }) %>
+                        <% }) %>
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
 
+<script src="/js/admin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
