--- a/src/views/search/index.ejs
+++ b/src/views/search/index.ejs
@@ -9,19 +9,31 @@
       <nav aria-label="breadcrumb d-flex align-content-center">
         <ol class="breadcrumb p-2 m-0 ps-3 d-flex justify-content-between">
           <li class="breadcrumb-item">
-            <a class="navbar-brand" href="/">
-              <div class="logo"></div>
+            <a class="navbar-brand" href="/"><svg xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-home-2" width="32" height="32" viewBox="0 0 24 24" stroke-width="2"
+                stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M5 12l-2 0l9 -9l9 9l-2 0" />
+                <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" />
+                <path d="M10 12h4v4h-4z" />
+              </svg>
             </a>
           </li>
-          <li class="breadcrumb-item active" aria-current="page">Buscar</li>
+          <li class="breadcrumb-item active currentPage" aria-current="page">Buscar</li>
         </ol>
       </nav>
       <div class="preguntas-frecuentes">
-        <a href="/preguntas-frecuentes"><img src="./img/home/question-mark-vector-icon.png" style="width: 30px;"
-            alt="Ayuda"></a>
+        <a href="/preguntas-frecuentes"><svg xmlns="http://www.w3.org/2000/svg"
+            class="icon icon-tabler icon-tabler-help" width="32" height="32" viewBox="0 0 24 24" stroke-width="2"
+            stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+            <path d="M12 17l0 .01" />
+            <path d="M12 13.5a1.5 1.5 0 0 1 1 -1.5a2.6 2.6 0 1 0 -3 -4" />
+          </svg></a>
       </div>
     </header>
-    <main class="justify-content-center bg-dark">
+    <main class="justify-content-center">
       <section class="justify-content-center text-light">
 
         <div class="container">
