--- a/src/views/home/partials/header.ejs
+++ b/src/views/home/partials/header.ejs
@@ -19,7 +19,7 @@
         <li class="breadcrumb-item">
           <a class="navbar-brand" href="/">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home-2" width="32" height="32"
-              viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffb4a3" fill="none" stroke-linecap="round"
+              viewBox="0 0 24 24" stroke-width="2" stroke="#ffffff" fill="none" stroke-linecap="round"
               stroke-linejoin="round">
               <path stroke="none" d="M0 0h24v24H0z" fill="none" />
               <path d="M5 12l-2 0l9 -9l9 9l-2 0" />
@@ -31,20 +31,21 @@
     </nav>
     <div class="preguntas-frecuentes">
       <a href="/iniciar-sesion" class="pe-3"><svg xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-login-2" width="32" height="32" viewBox="0 0 24 24" stroke-width="2.5"
-          stroke="#ffb4a3" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          class="icon icon-tabler icon-tabler-user-plus" width="32" height="32" viewBox="0 0 24 24" stroke-width="2"
+          stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
           <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M9 8v-2a2 2 0 0 1 2 -2h7a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-7a2 2 0 0 1 -2 -2v-2" />
-          <path d="M3 12h13l-3 -3" />
-          <path d="M13 15l3 -3" />
+          <path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" />
+          <path d="M16 19h6" />
+          <path d="M19 16v6" />
+          <path d="M6 21v-2a4 4 0 0 1 4 -4h4" />
         </svg></a>
-      <a href="/preguntas-frecuentes"><svg xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-help-circle" width="32" height="32" viewBox="0 0 24 24" stroke-width="2.5"
-          stroke="#ffb4a3" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <a href="/preguntas-frecuentes"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-help"
+          width="32" height="32" viewBox="0 0 24 24" stroke-width="2" stroke="#ffffff" fill="none"
+          stroke-linecap="round" stroke-linejoin="round">
           <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" />
-          <path d="M12 16v.01" />
-          <path d="M12 13a2 2 0 0 0 .914 -3.782a1.98 1.98 0 0 0 -2.414 .483" />
+          <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+          <path d="M12 17l0 .01" />
+          <path d="M12 13.5a1.5 1.5 0 0 1 1 -1.5a2.6 2.6 0 1 0 -3 -4" />
         </svg></a>
     </div>
   </header>
